# RAPTOR

Aigle/0.1/raptor/AiModelLifecycle/: .dockerignore  .env  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.lock.txt  requirements.txt
Aigle/0.1/raptor/AiModelLifecycle/docs/: COMMIT_MESSAGE.md  ERROR_HANDLING_COMMIT_MESSAGE.md  ERROR_HANDLING_REFACTORING_PLAN.md  ERROR_HANDLING_TEST_REPORT.md  THREAD_SAFETY_FIX.md  UV_DEPENDENCY_MANAGEMENT.md  test_error_handling.py
Aigle/0.1/raptor/AiModelLifecycle/src/api/: inference_api.py
Aigle/0.1/raptor/AiModelLifecycle/src/inference/: exceptions.py  executor.py  manager.py  router.py
Aigle/0.1/raptor/api_gateway/: README.md  SAMPLE_CODE_GUIDE.md  openapi.json  sample_code.ipynb  sample_code_curl.sh  sample_code_curl_en.sh  sample_code_en.ipynb  sample_code_python.py  sample_code_python_en.py
Aigle/0.1/raptor/api_gateway/sample_files/: EF25Y01.csv
Aigle/0.1/raptor/api_gateway/web_frontend/: README.md  app.py  requirements.txt
Aigle/0.1/raptor/api_gateway/web_frontend/static/: styles.css
Aigle/0.1/raptor/asset_management/: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml
Aigle/0.1/raptor/asset_management/asset_management/: client.py  database.py  endpoints.py  models.py  object_store.py  vector_store.py
Aigle/0.1/raptor/qdrant_search_docker/: api_audio_search_with_cache.py  api_document_search_with_cache.py  api_image_search_with_cache.py  api_insert.py  api_video_search_with_cache.py  docker-compose.yml
(+3 files in other folders)
